--- a/UMLRazor/Pages/Customers/ShowCustomers.cshtml
+++ b/UMLRazor/Pages/Customers/ShowCustomers.cshtml
@@ -24,9 +24,11 @@
                 <td>@item.Name</td>
                 <td>@item.Address</td>
                 <td>@item.Mobile</td>
-                <td><a asp-page="EditCustomer" asp-route-id="@item.Id">Edit</a></td>
-                <td><a asp-page="DeleteCustomer" asp-route-deleteId="@item.Id">Delete</a></td>
+                <td><a asp-page="EditCustomer" asp-route-editCustomer="@item.Mobile">Edit</a></td>
+                <td><a asp-page="DeleteCustomer" asp-route-deleteMobile="@item.Mobile">Delete</a></td>
             </tr>
         }
     </tbody>
 </table>
+
+<button onclick="location.href='AddCustomer';">Create Customer</button>
