--- a/UMLRazor/Pages/MenuItems/AddMenuItem.cshtml
+++ b/UMLRazor/Pages/MenuItems/AddMenuItem.cshtml
@@ -1,4 +1,30 @@
 ﻿@page
 @model UMLRazor.Pages.MenuItems.AddMenuItemModel
 @{
+    ViewData["Title"] = "Add Item";
 }
+
+<form method="post">
+    <div class="form-group">
+        <label asp-for="@Model.Item.Name" class="control-label"></label>
+        <input asp-for="@Model.Item.Name" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label asp-for="@Model._menuType" class="control-label"></label>
+        <input asp-for="@Model._menuType" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label asp-for="@Model.Item.Description" class="control-label"></label>
+        <input asp-for="@Model.Item.Description" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="@Model.Item.Price" class="control-label"></label>
+        <input asp-for="@Model.Item.Price" class="form-control" />
+    </div>
+
+    <div class="formgroup">
+        <input type="submit" value="Create Item" class="btn btn-primary" />
+    </div>
+</form>
