--- a/UMLRazor/Pages/MenuItems/ShowMenuItems.cshtml
+++ b/UMLRazor/Pages/MenuItems/ShowMenuItems.cshtml
@@ -1,4 +1,36 @@
 ﻿@page
+@using PizzaLibrary.Models
 @model UMLRazor.Pages.MenuItems.ShowMenuItemsModel
 @{
+    ViewData["Title"] = "Show Menu";
 }
+
+<h1>Number of customers @Model.Mr.Count</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Number</th>
+            <th>Name</th>
+            <th>Type</th>
+            <th>Description</th>
+            <th>Price</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (MenuItem item in Model.Mr)
+        {
+            <tr>
+                <td>@item.No</td>
+                <td>@item.Name</td>
+                <td>@item.TheMenuType</td>
+                <td>@item.Description</td>
+                <td>@item.Price</td>
+                <td><a asp-page="EditMenuItem" asp-route-editMenuItem="@item.No">Edit</a></td>
+                <td><a asp-page="DeleteMenuItem" asp-route-deleteMenuItem="@item.No">Delete</a></td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<button onclick="location.href='AddMenuItem';">Create Item</button>
