--- a/UMLRazor/Pages/Shared/_Layout.cshtml
+++ b/UMLRazor/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Customers/ShowCustomers">Customers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MenuItems/ShowMenuItems">Menu</a>
+                        </li>
                     </ul>
                 </div>
             </div>
