--- a/UMLRazor/Pages/Customers/AddCustomer.cshtml
+++ b/UMLRazor/Pages/Customers/AddCustomer.cshtml
@@ -12,7 +12,7 @@
 
     <div class="form-group">
         <label asp-for="@Model.Customer.Mobile" class="control-label"></label>
-        <input asp-for="@Model.Customer.Mobile" class="form-control" />
+        <input asp-for="@Model.Customer.Mobile" class="form-control" type="number"/>
     </div>
 
     <div class="form-group">
