--- a/UMLRazor/Pages/Customers/AddCustomer.cshtml
+++ b/UMLRazor/Pages/Customers/AddCustomer.cshtml
@@ -4,22 +4,28 @@
     ViewData["Title"] = "Add Customer";
 }
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="@Model.Customer.Name" class="control-label"></label>
-        <input asp-for="@Model.Customer.Name" class="form-control" />
+        <input asp-for="@Model.Customer.Name" class="form-control" required="true"/>
     </div>
 
     <div class="form-group">
         <label asp-for="@Model.Customer.Mobile" class="control-label"></label>
-        <input asp-for="@Model.Customer.Mobile" class="form-control" type="number"/>
+        <input asp-for="@Model.Customer.Mobile" class="form-control" type="number" required="true"/>
     </div>
 
     <div class="form-group">
         <label asp-for="@Model.Customer.Address" class="control-label"></label>
-        <input asp-for="@Model.Customer.Address" class="form-control" />
+        <input asp-for="@Model.Customer.Address" class="form-control" required="true"/>
     </div>
-
+    <div class="form-group">
+        <label asp-for="@Model.Photo" class="form-control"></label>
+        <div class="custom-file">
+            <input asp-for="@Model.Photo" class="custom-file-input form-control" />
+            <label class="custom-file-label">Gem Billede</label>
+        </div>
+    </div>
     <div class="formgroup">
         <input type="submit" value="Create Customer" class="btn btn-primary"/>
     </div>
