--- a/UMLRazor/Pages/Customers/EditCustomer.cshtml
+++ b/UMLRazor/Pages/Customers/EditCustomer.cshtml
@@ -37,7 +37,7 @@
         </form>
     </div>
     <div>
-        <a asp-page="Index">Back to List</a>
+        <a asp-page="ShowMenuItem">Back to List</a>
     </div>
 </div>
 
