--- a/UMLRazor/Pages/MenuItems/AddMenuItem.cshtml
+++ b/UMLRazor/Pages/MenuItems/AddMenuItem.cshtml
@@ -7,7 +7,7 @@
 <form method="post">
     <div class="form-group">
         <label asp-for="@Model.Item.Name" class="control-label"></label>
-        <input asp-for="@Model.Item.Name" class="form-control" />
+        <input asp-for="@Model.Item.Name" class="form-control" required="true"/>
     </div>
 
     <div class="form-group">
@@ -25,14 +25,14 @@
 
     <div class="form-group">
         <label asp-for="@Model.Item.Description" class="control-label"></label>
-        <input asp-for="@Model.Item.Description" class="form-control" />
+        <input asp-for="@Model.Item.Description" class="form-control" required="true"/>
     </div>
     <div class="form-group">
         <label asp-for="@Model.Item.Price" class="control-label"></label>
-        <input asp-for="@Model.Item.Price" class="form-control" type="number"/>
+        <input asp-for="@Model.Item.Price" class="form-control" type="number" required="true"/>
     </div>
 
     <div class="formgroup">
-        <input type="submit" value="Create Item" class="btn btn-primary" />
+        <input type="submit" value="Create Item" class="btn btn-primary"/>
     </div>
 </form>
