--- a/UMLRazor/Pages/MenuItems/ShowMenuItems.cshtml
+++ b/UMLRazor/Pages/MenuItems/ShowMenuItems.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Show Menu";
 }
 
-<h1>Number of customers @Model.Mr.Count</h1>
+<h1>Number of Items @Model.Mr.Count</h1>
 
 <table class="table">
     <thead>
