--- a/UMLRazor/Pages/Shared/_Layout.cshtml
+++ b/UMLRazor/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/MenuItems/ShowMenuItems">Menu</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Orders/CreateOrder">Create order</a>
+                        </li>
                     </ul>
                 </div>
             </div>
